Fixes #1 changed line height on the boxes to vertically align text

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,13 +63,13 @@ input {
 }
 
 .green {
-	background-color: green;
-	color: white;
+	background-color: rgb(99,166,149);
+	color: rgb(41,56,102);
 }
 
 .red {
-	background-color: red;
-	color: white;
+	background-color: rgb(182,226,242);
+	color: rgb(41,56,102	);
 }
 
 .buttonLabel {
@@ -102,19 +102,22 @@ input {
 
 #ticTacToe {
 	font-size: 56px;
+	color: rgb(182,242,226);
+	background-color: rgb(41,56,102);
 	width: 480px;
 	float: left;
-	/*transform: rotate(8deg);*/
 	vertical-align: bottom;
 	text-align: center;
-	margin-top: 5px;
+	margin-top: -4px;
 	margin-bottom: 10px;
+	border: 4px solid lightgrey;
 }
 
 .box {
 	display: inline-block;
 	height: 150px;
 	width: 150px;
+	line-height: 150px;
 	text-align: center;
 	padding: 2px;
 	font-size: 90px;
